--- a/Views/assets/css/chart.css
+++ b/Views/assets/css/chart.css
@@ -7,20 +7,13 @@
 }
 
 .cards {
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
+  border: 1px solid rgb(207, 207, 207);
   border-radius: 7px;
   width: 100%; /* Adjust the width as needed (100% means full width of the parent container) */
   max-width: 300px; /* Limit the maximum width if needed */
 }
 
-.card-money {
-  background: rgb(231, 231, 255);
-}
-
-.card-client {
-  background: rgba(239, 255, 239, 0.753);
-}
-
-.card-sale {
-  background: rgba(255, 225, 230, 0.726);
+.icon-lg{
+  color: yellow !important;
 }
