--- a/Views/assets/css/settings/list.css
+++ b/Views/assets/css/settings/list.css
@@ -109,74 +109,167 @@
     font-size: 16px;
 }
 
+
+
+
+
 .container {
-    margin-top: 30px;
     width: 1000px;
-    
-    height: 80vh;
+    margin-left: 0px;
     .card {
-        width: 1000px;
-        h2 {
-            margin-top: 20px;
-            
+        width: 1190px;
+        padding: 40px;
+        .edit {
+            display: flex;
+            justify-content: flex-end;
+            .edit-button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100px;
+                height: 40px;
+                border-radius: 15px;
+                background: rgb(157, 99, 5);
+                font-style: normal;
+                
+            }
         }
 
-    .account-details {
-        
-        padding: 40px;
-        padding-left: 80px;
-        a {
-            margin-top: 30px;
+        h2 {
+            padding: 20px;
+            margin-bottom: 30px;
             display: flex;
-            width: 80px;
-            text-align: center;
-            margin-left: 750px;
-            background: rgb(171, 112, 24);
-        }
-        .account-row {
-            
-            display: flex;
-            flex-direction: column;
             justify-content: flex-start;
-            .profile-image {
+        }
+
+        .account-details {
+            padding: 20px;
+            border-radius: 20px;
+            background: rgba(249, 249, 249, 0.777);
+            
+            .account-row {
                 display: flex;
                 flex-direction: row;
-                gap: 50px;
-                margin-bottom: 10px;
-                p {
-                    margin-top: 20px;
-                }
-            }
-            .account {
-                display: flex;
-                flex-direction: column;
-                justify-content: flex-end;
-                gap: 20px;
-                .a-1 {
+                width: 100%;
+                gap: 100px;
+                padding: 40px;
+
+                .left {
                     display: flex;
-                    flex-direction: row;
+                    flex-direction: column;
+                    width: 40%;
                     gap: 30px;
 
-            
-                    
-                    .a {
-                        
-                        border: 0.7px solid;
-                        border-radius: 10px;
-                        width: 400px;
-                        background: rgba(242, 242, 242, 0.574);
+                    .aa {
                         display: flex;
                         flex-direction: row;
-                        p {
-                            margin-left: 20px;
+                        gap: 40px;
+                        h6 {
+                            color: rgb(91, 89, 89);
+                           display: flex;
+                           justify-content: flex-start;
+                           align-items: flex-start;
+                        }
+
+                    }
+
+                    .aa-1 {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                      
+                        gap: 10px;
+                        h6 {
+                            color: rgb(91, 89, 89);
+                           display: flex;
+                           justify-content: flex-start;
+                           align-items: flex-start;
+                        }
+                        .a-1 {
+                            display: flex;
+                            background: rgba(227, 225, 225, 0.504);
+                        
+                            width: 350px;
+                            border-radius: 5px;
+
+                            p {
+                                display: flex;
+                                justify-content: flex-start;
+                                align-items: center;
+                                padding-left: 20px;
+                            }
                         }
                     }
+                }
+
+                .right {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    width: 40%;
+                    margin-left: 30px;
+                    gap: 30px;
+                   
+
+                    .bb {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                      
+                        gap: 10px;
+
+                        h6 {
+                            color: rgb(91, 89, 89);
+                           display: flex;
+                           justify-content: flex-start;
+                           align-items: flex-start;
+                        }
+
+                        .bb-1,
+                        .bb-2,
+                        .bb-3 {
+                           
+                            background: rgba(227, 225, 225, 0.504);
+                            width: 350px;
+                            border-radius: 5px;
+                            p {
+                                display: flex;
+                                justify-content: flex-start;
+                                align-items: center;
+                                padding-left: 20px;
+                            }
+                        }
+                    }
+
+                }
+            }
+
+            .buttom {
+                display: flex;
+                margin-top: 0px;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 30px;
+                gap: 10px;
+
+                .bt-1 {
                     
-
-
+                 
+                    width: 820px;
+                    background: rgba(227, 225, 225, 0.504);
+                    border-radius: 5px;
+                    p {
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+                        padding-left: 20px;
+                        height: 40px;
+                    }
+                    
                 }
             }
         }
-    }
+
     }
 }
