--- a/Views/assets/css/settings/nav.css
+++ b/Views/assets/css/settings/nav.css
@@ -1,16 +1,16 @@
 .navbar {
     display: flex;
     flex-direction: row;
-    width: 1200px;
+    width: 100%;
     .search-container {
-        width: 700px;
-        margin-left: 30px;
+        width: 50%;
+        /* margin-left: 30px; */
     }
     .icons {
-        width: 100px;
+        width: 20%;
         display: flex;
         flex-direction: row;
-        margin-right: 180px;
+        /* margin-right: 180px; */
         .icon-btn {
            .fas {
             color: black;
@@ -24,8 +24,8 @@
         
     }
     .profile {
-        width: 150px;
-        margin-right: 30px;
+        width: 15%;
+        margin-right: 1.5%;
         box-shadow: none;
     }
 
