--- a/Views/assets/css/settings/nav.css
+++ b/Views/assets/css/settings/nav.css
@@ -187,7 +187,7 @@
 
 .notification-footer a {
     font-size: 14px;
-    color: white;
+    color: #007bff;
     text-decoration: none;
 }
 .notification-footer.btn{
