--- a/Views/assets/css/settings/nav.css
+++ b/Views/assets/css/settings/nav.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    flex: 4;
    
 }
 
@@ -30,8 +31,12 @@
 /* Icons Section */
 .icons {
     display: flex;
+    margin-left: 20px;
+    flex: 2;
+    justify-content: flex-end;
     align-items: center;
     gap: 15px;
+    margin-right: 20px;
     color: #007bff;
     position: relative; /* To position the notification dropdown */
 }
@@ -60,8 +65,17 @@
     align-items: center;
     gap: 10px;
     position: relative;
-    margin-right: 20px;
     cursor: pointer;
+    padding: 10px;
+    border-radius: 8px;
+    margin-right: 20px;
+    background: #fff;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.profile-info {
+    display: flex;
+    flex-direction: column;
 }
 
 .profile img {
@@ -69,7 +83,13 @@
     height: 40px;
     border-radius: 50%;
 }
+#profile-section{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
 
+}
 .profile-info {
     display: flex;
     flex-direction: column;
@@ -120,7 +140,8 @@
     position: absolute;
     top: 40px;
     right: 0;
-    width: 350px;
+    height: auto ;
+    width: 400px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(168, 163, 163, 0.1);
