--- a/Views/assets/css/settings/nav.css
+++ b/Views/assets/css/settings/nav.css
@@ -11,7 +11,7 @@
 .search-container {
     display: flex;
     align-items: center;
-    background-color: #f1f3f4;
+    background-color: #fff;
     padding: 5px 10px;
     border-radius: 20px;
 }
